--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -8,8 +8,8 @@
     <p>Hello from MVC</p>
 
     <div th:each="product: ${products}">
-        <p th:text="${product.id}"></p>
-        <p th:text="${product.name}"></p>
+        <p th:text="${product.getPrice()}"></p>
+        <p th:text="${product.getName()}"></p>
     </div>
 
 </body>
