--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -5,7 +5,12 @@
     <title>Products</title>
 </head>
 <body>
-    <p>Hello from MVC</p>
+
+    <div>
+        <span>Hello : </span>
+        <span th:text="${userDetails.getUsername()}"></span>
+    </div>
+
 
     <div th:each="product: ${products}">
         <p th:text="${product.getPrice()}"></p>
