--- a/src/main/resources/templates/card.html
+++ b/src/main/resources/templates/card.html
@@ -2,19 +2,21 @@
 <html lang="en" xmlns:th="http://thmyelead.org">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>Card</title>
 </head>
 <body>
     <p>Get all card</p>
 
-    <div th:each="card: ${cards}">
+    <div class="mt-3" th:each="card: ${cards}">
         <p>Photo name : </p> <p th:text="${card.getName()}"></p>
         <p>URL photo : </p> <p th:text="${card.getPhotoUrl()}"></p>
 <!--        <img th:src="@{${'/images/' + card.getPhotoUrl()}}" width="150px" height="150px"/>-->
-        <img th:src="@{/images/{photoName}(photoName=${card.getPhotoUrl()})}" alt="">
-
+        <img th:src="@{/images/{photoName}(photoName=${card.getPhotoUrl()})}" alt="" />
     </div>
 
-
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
 </body>
 </html>
