--- a/src/main/resources/templates/furniture.html
+++ b/src/main/resources/templates/furniture.html
@@ -1,30 +1,71 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>Products</title>
 </head>
 <body>
-<h1>List of Products</h1>
-<table>
-    <tr>
-        <th>ID</th>
-        <th>Name</th>
-    </tr>
-    <tr th:each="furniture : ${furniturePage.content}">
-        <td th:text="${furniture.getId()}"></td>
-        <td th:text="${furniture.getName()}"></td>
-    </tr>
-</table>
+
+<div class="d-flex container justify-content-center mt-3">
+    <h1 class="h3">List of Products</h1>
+</div>
+
+<div class="d-flex container justify-content-center mt-3">
+    <table class="table table-dark">
+        <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">ID</th>
+            <th scope="col">Name</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="furniture : ${furniturePage.content}">
+            <td scope="row">#</td>
+            <td th:text="${furniture.getId()}"></td>
+            <td th:text="${furniture.getName()}"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
 
 <!-- Pagination Links -->
-<div>
-    <span th:text="'Page ' + ${currentPage + 1} + ' of ' + ${totalPages}"></span>
+<!--<div class="d-flex container justify-content-center mt-3">-->
+<!--    -->
+<!--    <span th:text="'Page ' + ${currentPage + 1} + ' of ' + ${totalPages}"></span>-->
 
-    <a th:if="${currentPage > 0}"
-       th:href="@{/furniture(page=${currentPage - 1}, size=${furniturePage.size})}">Previous</a>
+<!--    <a th:if="${currentPage > 0}"-->
+<!--       th:href="@{/furniture(page=${currentPage - 1}, size=${furniturePage.size})}">Previous</a>-->
 
-    <a th:if="${currentPage < totalPages - 1}"
-       th:href="@{/furniture(page=${currentPage + 1}, size=${furniturePage.size})}">Next</a>
+<!--    <a class="page-link" th:if="${currentPage < totalPages - 1}"-->
+<!--       th:href="@{/furniture(page=${currentPage + 1}, size=${furniturePage.size})}">Next</a>-->
+<!--</div>-->
+
+<div class="d-flex container justify-content-center mt-3">
+    <nav aria-label="Page navigation">
+        <ul class="pagination">
+
+            <li class="page-item">
+                <a class="page-link" th:if="${currentPage > 0}"
+                   th:href="@{/furniture(page=${currentPage - 1}, size=${furniturePage.size})}">Previous</a>
+            </li>
+
+            <li class="page-item">
+                <span class="page-link" th:text="${currentPage + 1} + ' - ' + ${totalPages}"></span>
+            </li>
+
+            <li class="page-item">
+                <a class="page-link" th:if="${currentPage < totalPages - 1}"
+                   th:href="@{/furniture(page=${currentPage + 1}, size=${furniturePage.size})}">Next</a>
+            </li>
+        </ul>
+    </nav>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+
 </body>
 </html>
