--- a/src/main/resources/templates/furniture.html
+++ b/src/main/resources/templates/furniture.html
@@ -4,44 +4,32 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>Products</title>
 </head>
-<body>
+<body class="bg-light">
 
-<div class="d-flex container justify-content-center mt-3">
-    <h1 class="h3">List of Products</h1>
-</div>
+    <div class="d-flex container justify-content-center mt-3">
+        <h1 class="h3">List of Products</h1>
+    </div>
 
-<div class="d-flex container justify-content-center mt-3">
-    <table class="table table-dark">
-        <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">ID</th>
-            <th scope="col">Name</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="furniture : ${furniturePage.content}">
-            <td scope="row">#</td>
-            <td th:text="${furniture.getId()}"></td>
-            <td th:text="${furniture.getName()}"></td>
-        </tr>
-        </tbody>
-    </table>
-</div>
-
+    <div class="d-flex container justify-content-center mt-3 w-50">
+        <table class="table table-dark">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">ID</th>
+                <th scope="col">Name</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="furniture, counter : ${furniturePage.content}">
+                <td scope="row" th:text="${counter.count - 1}"></td>
+                <td th:text="${furniture.getId()}"></td>
+                <td th:text="${furniture.getName()}"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 
 <!-- Pagination Links -->
-<!--<div class="d-flex container justify-content-center mt-3">-->
-<!--    -->
-<!--    <span th:text="'Page ' + ${currentPage + 1} + ' of ' + ${totalPages}"></span>-->
-
-<!--    <a th:if="${currentPage > 0}"-->
-<!--       th:href="@{/furniture(page=${currentPage - 1}, size=${furniturePage.size})}">Previous</a>-->
-
-<!--    <a class="page-link" th:if="${currentPage < totalPages - 1}"-->
-<!--       th:href="@{/furniture(page=${currentPage + 1}, size=${furniturePage.size})}">Next</a>-->
-<!--</div>-->
-
 <div class="d-flex container justify-content-center mt-3">
     <nav aria-label="Page navigation">
         <ul class="pagination">
