--- a/src/main/resources/templates/product-details.html
+++ b/src/main/resources/templates/product-details.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://thmyelead.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Product details</title>
 </head>
 <body>
     <p th:text="${productDto.id}"></p>
